fix session parentObjectives p element display to remove extra margin

--- a/packages/ilios-common/app/styles/ilios-common/mixins/objectives.scss
+++ b/packages/ilios-common/app/styles/ilios-common/mixins/objectives.scss
@@ -118,7 +118,8 @@
       }
     }
 
-    .description {
+    .description,
+    .session-objective-list-item-parents {
       p {
         @include font-size.font-size("base");
         margin: 0;
